--- a/mike02.css
+++ b/mike02.css
@@ -80,27 +80,27 @@ position: relative;
 }
 
 #content:after {
-content: "."; 
-display: block; 
-clear: both; 
+content: ".";
+display: block;
+clear: both;
 height: 0;
 visibility: hidden
-}	
+}
 
 #content a:hover {
 background: #f4bad8;
 color: #fff;
 }
 
-/* 
+/*
 header-with picture and site description.
 It uses a hack for vertical-align because IE doesn't work properly with tables
 */
 #contentHeader {
 margin: 15px auto;
-width: 710px;
-height: 182px;
-background: url(header.gif) no-repeat;
+width: 300px;
+height: 350px;
+background: url(indigosea2c.jpg) no-repeat;
 border: 1px solid #44434c;
 position: relative;
 }
@@ -176,7 +176,7 @@ border: 0;
 
 /************* Footer *************/
 #footer {
-position: relative;	
+position: relative;
 clear: both;
 margin: 0 auto;
 background: #45444d;
