--- a/mike02.css
+++ b/mike02.css
@@ -96,7 +96,7 @@ It uses a hack for vertical-align because IE doesn't work properly with tables
 */
 #contentHeader {
 margin: 15px auto;
-width: 300px;
+width: 500px;
 height: 350px;
 background: url(indigosea2c.jpg) no-repeat;
 border: 1px solid #44434c;
@@ -188,4 +188,9 @@ text-align: center;
 #footer a {
 color: #fff;
 font-weight: bold;
+}
+
+.main {
+	width: 400;
+	margin: 0;
 }
