--- a/mike02.css
+++ b/mike02.css
@@ -28,7 +28,7 @@ height: auto !important;
 min-height: 100%;
 padding-bottom: 15px;
 position: relative;
-background: #fff url(containerBg.gif) bottom left repeat-x fixed;
+background: #f4bad8 url(containerBg.gif) bottom left repeat-x fixed;
 }
 
 * html #container {
@@ -112,7 +112,7 @@ position: static;
 position: absolute;
 top: 50%;
 padding-left: 250px;
-color: #fff;
+color: #44434c;
 }
 
 #siteDescription[id] {
