--- a/mike02.css
+++ b/mike02.css
@@ -38,6 +38,13 @@ background: #f4bad8 url(containerBg.gif) bottom left repeat-x fixed;
 /************* header-*************/
 #headerWrap {
 height: 59px;
+   position:fixed;
+   top:0;
+   left:0;
+   right:0;
+    z-index: 99999;
+   /*width:100%;*/
+margin-bottom: 59px;
 background: url(headerBg.gif);
 }
 
@@ -96,6 +103,7 @@ It uses a hack for vertical-align because IE doesn't work properly with tables
 */
 #contentHeader {
 margin: 15px auto;
+margin-top: 59px;
 width: 500px;
 height: 350px;
 background: url(indigosea2c.jpg) no-repeat;
